--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,18 +1,15 @@
 .nav {
+    z-index: 100;
     width:100%;
     height:80px;
-    background-color: #1C2833 ;
     display: flex;
     align-items: center;
     position: relative;
+    transition: all .3s ease;
 }
 
 .nav-logo {
     display: flex;
-}
-
-.nav-logo-text {
-    color: #fff;
 }
 
 .nav-logo-icon {
@@ -23,18 +20,26 @@
     color: #E74C3C;
 }
 
-.nav-menu-icon {
-    color: #E74C3C;
-    width: 30px;
-    height: 30px;
-    display: inline-block;
-    cursor: pointer;
+.menu-icon-theme-wrapper {
     margin-left: auto;
     margin-right: 10px;
+    height: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+}
+
+.nav-menu-icon {
+    color: #E74C3C;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    cursor: pointer;
     transition: all .3s ease;
 }
 
 .menu {
+    z-index: 9999;
     position: absolute;
     display: flex;
     justify-content: space-evenly;
@@ -43,20 +48,33 @@
     left: -100%;
     height:calc(100vh - 80px);
     width: 100%;
-    background-color: #1C2833;
-    transition: all .5s ease;
+    transition: all .3s ease;
     &.open {
         left: 0;
     }
+    
 }
 
 .menu-link {
+    position: relative;
     text-decoration: none;
-    color: #fff;
-    font-size: 2rem;
-    transition: all .3s ease; 
+    font-size: 1.5rem;
+    transition: all .3s ease;
+    &::before {
+        position: absolute;
+        content: '';
+        left: 0;
+        bottom: 0;
+        height: 3px;
+        width: 0;
+        background-color: #E74C3C;
+        transition: all .3s ease;
+    }
+    &:hover::before {
+        width: 100%;
+    } 
     &:hover {
-        color: #E74C3C ;
+        color: #E74C3C !important;
     }
 }
 
