refactor use of custom useTheme hook to apply to top level App component only,almost done with Footer component

--- a/src/components/CustomerReviews/CustomerReviews.scss
+++ b/src/components/CustomerReviews/CustomerReviews.scss
@@ -1,7 +1,8 @@
 .reviews-wrapper {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    text-align: center;
 }
