--- a/src/components/CustomerReviews/CustomerReviews.css
+++ b/src/components/CustomerReviews/CustomerReviews.css
@@ -1,5 +1,5 @@
 .reviews-wrapper {
-  height: 100vh;
+  min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -13,5 +13,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
 }
 /*# sourceMappingURL=CustomerReviews.css.map */
