--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,16 +9,14 @@
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  margin-left: 20px;
+}
+
+.title-container {
+  text-align: center;
 }
 
 .social-icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+  text-align: center;
 }
 
 .link {
@@ -26,6 +24,7 @@
 }
 
 .footer-icon {
+  margin: 10px;
   width: 25px;
   height: 25px;
 }
@@ -51,6 +50,7 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  margin-left: 20px;
 }
 
 .support {
@@ -66,17 +66,59 @@
           justify-content: flex-start;
 }
 
-h6:first-child {
-  margin-bottom: 10px;
-  opacity: 0.5;
+.support:nth-child(2n) {
+  margin-left: 15px;
+}
+
+.contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 40px 0 20px 20px;
 }
 
 input {
+  font: inherit;
   border: none;
   outline: none;
   background-color: transparent;
   border-bottom: .5px solid #E74C3C;
-  padding-bottom: 5px;
   width: 200px;
+  height: 50px;
+  margin-bottom: 10px;
+}
+
+input:focus::-webkit-input-placeholder {
+  -webkit-transform: translateY(-15px);
+          transform: translateY(-15px);
+  font-size: small;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+input:focus:-ms-input-placeholder {
+  transform: translateY(-15px);
+  font-size: small;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+input:focus::-ms-input-placeholder {
+  transform: translateY(-15px);
+  font-size: small;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+input:focus::placeholder {
+  -webkit-transform: translateY(-15px);
+          transform: translateY(-15px);
+  font-size: small;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
 }
 /*# sourceMappingURL=Footer.css.map */
